Fixed Button and Font, Aligned Infoboxes

--- a/html-css-lab/style.css
+++ b/html-css-lab/style.css
@@ -18,14 +18,18 @@ header {
 
 #landing {
     height: 600px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.5)),
+    background-image: linear-gradient(
+            rgba(51, 51, 51, 0.4),
+            rgba(51, 51, 51, 0.42)
+        ),
         url("spices.jpg");
+    background-size: cover;
     text-align: center;
     color: white;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 42px;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+    font-size: 32px;
     font-style: italic;
-    font-weight:700;
+    font-weight: 700;
     margin-top: 20px;
 }
 
@@ -37,20 +41,41 @@ header {
     color: chocolate;
     background-color: rgb(255, 202, 26);
     font-size: 32px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
     font-weight: 800px;
     padding: 7px 60px;
     border: 3px solid chocolate;
-    border-radius: 20px;
-}
-#infos {
-    background-color:rgb(160, 160, 160);
-    color: black;
-    height: 400px;
+    border-radius: 30px;
 }
 
-.featureimage {
+#infos {
+    background-color: rgb(160, 160, 160);
+    color: black;
+    height: 320px;
+    font-size: 16px;
+    text-align: center;
+}
+
+.infobox {
+    display: inline-block;
+    height: 120px;
+    width: 400px;
+}
+
+.infobox div {
+    display: inline-block;
+    margin-top: 25px;
+    vertical-align: top;
+}
+
+.infobox p {
+    margin: 10px 3px;
+    text-align: left;
+}
+
+.infoboximage {
     height: 40px;
+    margin: 10px;
 }
 
 footer {
@@ -62,6 +87,6 @@ footer {
     background-color: rgb(72, 72, 72);
 }
 
-footer > p {
+footer p {
     margin: 0px;
 }
